--- a/org.eclipse.pde.doc.user/pom.xml
+++ b/org.eclipse.pde.doc.user/pom.xml
@@ -20,33 +20,39 @@
   <version>3.14.2200-SNAPSHOT</version>
   <packaging>eclipse-plugin</packaging>
   
+  <properties>
+	  <eclipse.pde.ui.ui>${basedir}/../ui/</eclipse.pde.ui.ui>
+	  <eclipse.pde.ui.apitools>${basedir}/../apitools/</eclipse.pde.ui.apitools>
+	  <eclipse.pde.build>${basedir}/../build/</eclipse.pde.build>
+  </properties>
+  
     <build>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-dependency-plugin</artifactId>
-          <executions>
-            <execution>
-              <id>copy</id>
-              <phase>process-resources</phase>
-              <goals>
-                <goal>copy-dependencies</goal>
-              </goals>
-              <configuration>
-                <overwriteReleases>true</overwriteReleases>
-                <overwriteSnapshots>true</overwriteSnapshots>
-              </configuration>
-            </execution>
-          </executions>
-        </plugin>
-        <plugin>
-			<groupId>org.eclipse.tycho.extras</groupId>
-			<artifactId>tycho-document-bundle-plugin</artifactId>
-			<version>${tycho.version}</version>
-		</plugin>
-      </plugins>
-    </pluginManagement>
+<!--    <pluginManagement>-->
+<!--      <plugins>-->
+<!--        <plugin>-->
+<!--          <groupId>org.apache.maven.plugins</groupId>-->
+<!--          <artifactId>maven-dependency-plugin</artifactId>-->
+<!--          <executions>-->
+<!--            <execution>-->
+<!--              <id>copy</id>-->
+<!--              <phase>process-resources</phase>-->
+<!--              <goals>-->
+<!--                <goal>copy-dependencies</goal>-->
+<!--              </goals>-->
+<!--              <configuration>-->
+<!--                <overwriteReleases>true</overwriteReleases>-->
+<!--                <overwriteSnapshots>true</overwriteSnapshots>-->
+<!--              </configuration>-->
+<!--            </execution>-->
+<!--          </executions>-->
+<!--        </plugin>-->
+<!--        <plugin>-->
+<!--			<groupId>org.eclipse.tycho.extras</groupId>-->
+<!--			<artifactId>tycho-document-bundle-plugin</artifactId>-->
+<!--			<version>${tycho.version}</version>-->
+<!--		</plugin>-->
+<!--      </plugins>-->
+<!--    </pluginManagement>-->
   </build>
   
   <profiles>
@@ -102,14 +108,20 @@
                     <id>org.eclipse.update.configurator</id>
                     <versionRange>0.0.0</versionRange>
                   </requirement>
+                  <requirement>
+                    <type>eclipse-plugin</type>
+                    <id>org.eclipse.ui.views.log</id>
+                    <versionRange>0.0.0</versionRange>
+                  </requirement>
+                  
                 </extraRequirements>
               </dependency-resolution>
             </configuration>
           </plugin>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-dependency-plugin</artifactId>
-          </plugin>
+<!--          <plugin>-->
+<!--            <groupId>org.apache.maven.plugins</groupId>-->
+<!--            <artifactId>maven-dependency-plugin</artifactId>-->
+<!--          </plugin>-->
           <plugin>
 				<groupId>org.eclipse.tycho.extras</groupId>
 				<artifactId>tycho-document-bundle-plugin</artifactId>
@@ -134,78 +146,237 @@
 					</execution>
 				</executions>
 			</plugin>
-          <plugin>
-            <groupId>org.eclipse.tycho.extras</groupId>
-            <artifactId>tycho-eclipserun-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>dont_skip_me</id>
-                <phase>compile</phase>
-                <configuration>
-                  <skip>false</skip>
-                  <!-- call buildDoc.xml -->
-                  <applicationsArgs>
-	                  <args>-consolelog</args>
-	                  <args>-debug</args>
-	                  <args>-data</args>
-	                  <args>target/workspace</args>
-	                  <args>-application</args>
-	                  <args>org.eclipse.ant.core.antRunner</args>
-	                  <args>-quiet</args>
-	                  <args>-buildfile</args>
-	                  <args>buildDoc.xml</args>
-	                  <args>-Dbasedir.properties=cbi_basedirs.properties</args>
-	                  <args>-Declipse.javadoc=${eclipse.javadoc}</args>
-                  </applicationsArgs>
-                  <dependencies>
-                    <dependency>
-                      <artifactId>org.eclipse.osgi.compatibility.state</artifactId>
-                      <type>eclipse-plugin</type>
-                    </dependency>
-                    <dependency>
-                      <artifactId>org.eclipse.ant.core</artifactId>
-                      <type>eclipse-plugin</type>
-                    </dependency>
-                    <dependency>
-                      <artifactId>org.apache.ant</artifactId>
-                      <type>eclipse-plugin</type>
-                    </dependency>
-                    <dependency>
-                      <artifactId>org.eclipse.help.base</artifactId>
-                      <type>eclipse-plugin</type>
-                    </dependency>
-                    <dependency>
-                      <artifactId>org.eclipse.pde.build</artifactId>
-                      <type>eclipse-plugin</type>
-                    </dependency>
-                    <dependency>
-                      <artifactId>org.eclipse.pde.core</artifactId>
-                      <type>eclipse-plugin</type>
-                    </dependency>
-                    <dependency>
-                      <artifactId>jakarta.annotation-api</artifactId>
-                      <type>eclipse-plugin</type>
-                    </dependency>
-                    <dependency>
-                      <artifactId>org.eclipse.update.configurator</artifactId>
-                      <type>eclipse-plugin</type>
-                    </dependency>
-                    <dependency>
-                      <type>eclipse-plugin</type>
-                      <artifactId>com.ibm.icu</artifactId>
-                    </dependency>
-                    <dependency>
-                      <type>eclipse-plugin</type>
-                      <artifactId>biz.aQute.bndlib</artifactId>
-                    </dependency>
-                  </dependencies>
-                </configuration>
-                <goals>
-                  <goal>eclipse-run</goal>
-                </goals>
-              </execution>
-            </executions>
-          </plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<!-- Must use older version see
+					https://issues.apache.org/jira/projects/MJAVADOC/issues/MJAVADOC-707 -->
+					<artifactId>maven-javadoc-plugin</artifactId>
+					<version>3.6.0</version>
+					<executions>
+						<execution>
+							<id>attach-javadocs</id>
+							<phase>prepare-package</phase>
+							<goals>
+								<goal>javadoc</goal>
+							</goals>
+						</execution>
+					</executions>
+					<configuration>
+						<source>17</source>
+						<legacyMode>true</legacyMode>
+						<failOnError>true</failOnError>
+						<excludePackageNames>*.internal.*</excludePackageNames>
+						<windowtitle>Eclipse PDE API Specification</windowtitle>
+						<doctitle>Eclipse PDE API Specification</doctitle>
+						<header><![CDATA[<span style='font-size:small'><b>Eclipse PDE</b><br>2023-12 (4.30)</span> ]]></header>
+						<bottom><![CDATA[<br><span style='font-size:small;float:right'>Copyright (c) 2000, 2023 Eclipse Contributors and others. All rights reserved.</span><span style='font-size:small'><a href='{@docRoot}/../misc/api-usage-rules.html'>Guidelines for using Eclipse APIs.</a></span>]]></bottom>
+						<sourcepath>${eclipse.pde.build}/org.eclipse.pde.build/src
+									;${eclipse.pde.ui.apitools}/org.eclipse.pde.api.tools.annotations/src
+									;${eclipse.pde.ui.ui}/org.eclipse.pde.core/src
+									;${eclipse.pde.ui.ui}/org.eclipse.pde.launching/src
+									;${eclipse.pde.ui.ui}/org.eclipse.pde.ui/src</sourcepath>
+						<debug>true</debug>
+						<quiet>false</quiet>
+						<doclint>reference,html,syntax</doclint>
+						<splitindex>true</splitindex>
+						<breakiterator>true</breakiterator>
+						<encoding>UTF-8</encoding>
+						<charset>UTF-8</charset>
+						<use>true</use>
+						<links>
+							<link>https://docs.osgi.org/javadoc/osgi.core/8.0.0/</link>
+							<link>https://docs.osgi.org/javadoc/osgi.cmpn/8.0.0/</link>
+							<link>https://docs.osgi.org/javadoc/osgi.enterprise/7.0.0/</link>
+						</links>
+						<offlineLinks>
+							<offlineLink>
+								<url>../../../../../../../org.eclipse.jdt.doc.isv/reference/api</url>
+								<location>https://help.eclipse.org/latest/topic/org.eclipse.jdt.doc.isv/reference/api</location>
+							</offlineLink>
+							<offlineLink>
+								<url>../../../../../../../org.eclipse.platform.doc.isv/reference/api</url>
+								<location>https://help.eclipse.org/latest/topic/org.eclipse.platform.doc.isv/reference/api</location>
+							</offlineLink>
+						</offlineLinks>
+						<tags>
+							<tag>
+								<name>noimplement</name>
+								<placement>a</placement>
+								<head>Restriction:</head>
+							</tag>
+							<tag>
+								<name>noextend</name>
+								<placement>a</placement>
+								<head>Restriction:</head>
+							</tag>
+							<tag>
+								<name>noreference</name>
+								<placement>a</placement>
+								<head>Restriction:</head>
+							</tag>
+							<tag>
+								<name>noinstantiate</name>
+								<placement>a</placement>
+								<head>Restriction:</head>
+							</tag>
+							<tag>
+								<name>nooverride</name>
+								<placement>a</placement>
+								<head>Restriction:</head>
+							</tag>
+							<tag>
+								<name>TrackedGetter</name>
+								<placement>cm</placement>
+								<head>TrackedGetter</head>
+							</tag>
+							<tag>
+								<name>model</name>
+								<placement>X</placement>
+								<head>EMF generated tag</head>
+							</tag>
+							<tag>
+								<name>generated</name>
+								<placement>X</placement>
+								<head>EMF generated tag</head>
+							</tag>
+							<tag>
+								<name>ordered</name>
+								<placement>X</placement>
+								<head>EMF generated tag</head>
+							</tag>
+							<tag>
+								<name>Immutable</name>
+								<placement>t</placement>
+								<head></head>
+							</tag>
+							<tag>
+								<name>implNote</name>
+								<placement>a</placement>
+								<head><![CDATA[<em>Implementation Note:</em>]]></head>
+							</tag>
+							<tag>
+								<name>implSpec</name>
+								<placement>a</placement>
+								<head>Implementation Requirements:</head>
+							</tag>
+						</tags>
+						<!-- These are provided by PDE/Tycho by default but
+						javadoc do not know that ... -->
+						<additionalDependencies>
+							<additionalDependency>
+								<groupId>org.osgi</groupId>
+								<artifactId>org.osgi.annotation.bundle</artifactId>
+								<version>2.0.0</version>
+							</additionalDependency>
+							<additionalDependency>
+								<groupId>org.osgi</groupId>
+								<artifactId>org.osgi.annotation.versioning</artifactId>
+								<version>1.1.2</version>
+							</additionalDependency>
+							<additionalDependency>
+								<groupId>org.osgi</groupId>
+								<artifactId>
+									org.osgi.service.component.annotations</artifactId>
+								<version>1.5.0</version>
+							</additionalDependency>
+						</additionalDependencies>
+					</configuration>
+				</plugin>
+				<plugin>
+			        <artifactId>maven-resources-plugin</artifactId>
+			        <executions>
+			          <execution>
+			            <id>copy-resources</id>
+			            <!-- here the phase you need -->
+			            <phase>prepare-package</phase>
+			            <goals>
+			              <goal>copy-resources</goal>
+			            </goals>
+			            <configuration>
+			              <outputDirectory>${basedir}/reference/api</outputDirectory>
+			              <resources>          
+			                <resource>
+			                  <directory>${project.build.directory}/site/apidocs</directory>
+			                </resource>
+			              </resources>              
+			            </configuration>            
+			          </execution>
+			        </executions>
+			      </plugin>
+
+
+					<!--          <plugin>-->
+					<!--            <groupId>org.eclipse.tycho.extras</groupId>-->
+					<!--            <artifactId>tycho-eclipserun-plugin</artifactId>-->
+					<!--            <executions>-->
+					<!--              <execution>-->
+					<!--                <id>dont_skip_me</id>-->
+					<!--                <phase>compile</phase>-->
+					<!--                <configuration>-->
+					<!--                  <skip>false</skip>-->
+					<!--                   call buildDoc.xml -->
+					<!--                  <applicationsArgs>-->
+					<!--	                  <args>-consolelog</args>-->
+					<!--	                  <args>-debug</args>-->
+					<!--	                  <args>-data</args>-->
+					<!--	                  <args>target/workspace</args>-->
+					<!--	                  <args>-application</args>-->
+					<!--	                  <args>org.eclipse.ant.core.antRunner</args>-->
+					<!--	                  <args>-quiet</args>-->
+					<!--	                  <args>-buildfile</args>-->
+					<!--	                  <args>buildDoc.xml</args>-->
+					<!--	                  <args>-Dbasedir.properties=cbi_basedirs.properties</args>-->
+					<!--	                  <args>-Declipse.javadoc=${eclipse.javadoc}</args>-->
+					<!--                  </applicationsArgs>-->
+					<!--                  <dependencies>-->
+					<!--                    <dependency>-->
+					<!--                      <artifactId>org.eclipse.osgi.compatibility.state</artifactId>-->
+					<!--                      <type>eclipse-plugin</type>-->
+					<!--                    </dependency>-->
+					<!--                    <dependency>-->
+					<!--                      <artifactId>org.eclipse.ant.core</artifactId>-->
+					<!--                      <type>eclipse-plugin</type>-->
+					<!--                    </dependency>-->
+					<!--                    <dependency>-->
+					<!--                      <artifactId>org.apache.ant</artifactId>-->
+					<!--                      <type>eclipse-plugin</type>-->
+					<!--                    </dependency>-->
+					<!--                    <dependency>-->
+					<!--                      <artifactId>org.eclipse.help.base</artifactId>-->
+					<!--                      <type>eclipse-plugin</type>-->
+					<!--                    </dependency>-->
+					<!--                    <dependency>-->
+					<!--                      <artifactId>org.eclipse.pde.build</artifactId>-->
+					<!--                      <type>eclipse-plugin</type>-->
+					<!--                    </dependency>-->
+					<!--                    <dependency>-->
+					<!--                      <artifactId>org.eclipse.pde.core</artifactId>-->
+					<!--                      <type>eclipse-plugin</type>-->
+					<!--                    </dependency>-->
+					<!--                    <dependency>-->
+					<!--                      <artifactId>jakarta.annotation-api</artifactId>-->
+					<!--                      <type>eclipse-plugin</type>-->
+					<!--                    </dependency>-->
+					<!--                    <dependency>-->
+					<!--                      <artifactId>org.eclipse.update.configurator</artifactId>-->
+					<!--                      <type>eclipse-plugin</type>-->
+					<!--                    </dependency>-->
+					<!--                    <dependency>-->
+					<!--                      <type>eclipse-plugin</type>-->
+					<!--                      <artifactId>com.ibm.icu</artifactId>-->
+					<!--                    </dependency>-->
+					<!--                    <dependency>-->
+					<!--                      <type>eclipse-plugin</type>-->
+					<!--                      <artifactId>biz.aQute.bndlib</artifactId>-->
+					<!--                    </dependency>-->
+					<!--                  </dependencies>-->
+					<!--                </configuration>-->
+					<!--                <goals>-->
+					<!--                  <goal>eclipse-run</goal>-->
+					<!--                </goals>-->
+					<!--              </execution>-->
+					<!--            </executions>-->
+					<!--          </plugin>-->
         </plugins>
       </build>
     </profile>
