--- a/.github/workflows/bump-bundles.yml
+++ b/.github/workflows/bump-bundles.yml
@@ -33,4 +33,4 @@ jobs:
       matrix: ${{ fromJson(needs.list-bundles.outputs.bundles) }}
     steps:
       - name: Update Bundle ${{ matrix.bundles }}
-        run: echo "Hello"
+        run: echo "Hello World"
