--- a/.github/workflows/bump-bundles.yml
+++ b/.github/workflows/bump-bundles.yml
@@ -16,6 +16,8 @@ jobs:
       - name: List all bundles
         id: list-bundles
         run: |
+          pwd
+          ls
           directories=($(ls -d */))
           directories=("${directories[@]%/}")
           json_array=()
