--- a/.github/workflows/bump-bundles.yml
+++ b/.github/workflows/bump-bundles.yml
@@ -58,8 +58,8 @@ jobs:
       - name: Update Bundle ${{ matrix.bundles }} 
         working-directory: ${{ matrix.bundles }} 
         run: >-
-          mvn org.eclipse.tycho.extras:tycho-version-bump-plugin:4.0.9-SNAPSHOT:update-manifest
-          -Dtycho.version=4.0.9-SNAPSHOT
+          mvn -B org.eclipse.tycho.extras:tycho-version-bump-plugin:5.0.0-SNAPSHOT:update-manifest
+          -Dtycho.version=5.0.0-SNAPSHOT
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@c5a7806660adbe173f04e3e038b0ccdcd758773c # v6.1.0
         with:
